<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="4dp" >
    </TableRow> 
        
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/Label_CarLicense"
	        android:layout_width="175dp"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/CarLicense" />
    </TableRow>   
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="2dp" >
    </TableRow> 
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/List_Vehicle"
       		android:textSize="12dp"
            android:layout_width="fill_parent"
            android:layout_height="260dp" >
        </ListView>
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
         
        <ListView
            android:id="@+id/Play_Time"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:drawSelectorOnTop="false"
       		android:textSize="12dp" 
            android:scrollbars="vertical"  >
        </ListView>
    </TableRow>
    
    <RelativeLayout
	    android:id="@+id/tableRow6"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <Button
		        android:id="@+id/cancelButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="20dp"
       			android:textSize="15dp"
       			android:textStyle="bold"
       			android:drawableLeft="@drawable/cancel"    			
        		android:textColor="#0080FF"
        		android:background="#00FFFFFF"
		        android:text="@string/Cancel" />
		
		<Button
		        android:id="@+id/OkButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="20dp"
       			android:textSize="15dp"
       			android:textStyle="bold"
       			android:drawableLeft="@drawable/ok"    			
        		android:textColor="#0080FF"
        		android:background="#00FFFFFF"
		        android:text="@string/OK" />
    </RelativeLayout>

</LinearLayout>