<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    				  android:id="@+id/maptablayout" 
    				  android:orientation="vertical"  
    				  android:layout_width="fill_parent" 
    				  android:layout_height="fill_parent">  

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="fill_parent"
        android:layout_height="8dp" >
        
    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow0" >
        
         <TextView
	        android:id="@+id/AL_Label_CarLicense"
	        android:layout_width="175dp"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/CarLicense" />
	    <TextView
	        android:id="@+id/AL_Label_AlarmType"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/AlarmType" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableRow1" >
        
         <Spinner
	        android:id="@+id/AL_ComBox_CarLicense"
	        android:layout_width="170dp"
	        android:layout_height="45dp"
       		android:textSize="12dp" 
	        android:prompt="@string/CarLicense" />
	    <Spinner
	        android:id="@+id/AL_ComBox_AlarmType"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
       		android:textSize="12dp" 
	        android:prompt="@string/AlarmType" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableRow2" >
         
        <ListView
            android:id="@+id/AL_ListTime"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:drawSelectorOnTop="false"
       		android:textSize="12dp" 
            android:scrollbars="vertical"  >
        </ListView>
    </TableRow>
        
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableRow3" >
        
        <TextView
	        android:id="@+id/AL_Empty"
	        android:layout_width="30dp"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="" />
        
         <TextView
	        android:id="@+id/AL_Header_CarLicense"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/CarLicense" />
         <TextView
	        android:id="@+id/AL_Header_AlarmType"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/AlarmType" />
         <TextView
	        android:id="@+id/AL_Header_Info"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
       		android:textSize="12dp" 
	        android:text="@string/Remark" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableRow4" >

         <ListView
            android:id="@+id/AL_ListInfo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
       		android:textSize="12dp" 
            android:scrollbars="vertical"  >
        </ListView>
        
    </TableRow>

    <Button
        android:id="@+id/AL_QueryAlarm"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:background="#00FFFFFF"
        android:drawableLeft="@drawable/query"
        android:text="@string/Query"
        android:textSize="15dp"   
        android:textColor="#0080FF"
        android:textStyle="bold" />

</RelativeLayout>